--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
           overwrite: true
           file_glob: true
           body: "Tiny CC Windows Installer, includes full Mingw32 headers, and cross compiling tool chains for:
-                i386-linux, x86_64-linux, i386-win32, x86_64-osx, arm, arm64, riscv64, arm-wince, arm64-osx."
+                i386-linux, x86_64-linux, i386-win32, x86_64-osx, armv7, arm64, riscv64, armv7-wince, arm64-osx."
 
   build-macos:
     name: macOS
@@ -77,7 +77,7 @@ jobs:
           overwrite: true
           file_glob: true
           body: "Tiny CC macOS Installer, includes full Windows Mingw32 headers, and cross compiling tool chains for:
-                i386-linux, i386-win32, x86_64-linux, x86_64-win64, x86_64-osx, arm, arm64, riscv64, arm-wince, arm64-osx."
+                i386-linux, i386-win32, x86_64-linux, x86_64-win64, x86_64-osx, armv7, arm64, riscv64, armv7-wince, arm64-osx."
 
   build-ubuntu:
     name: Linux ${{ matrix.target }}
@@ -118,7 +118,7 @@ jobs:
           overwrite: true
           file_glob: true
           body: "Tiny CC DEB Installer, includes full Windows Mingw32 headers, and cross compiling tool chains for:
-                i386-linux, i386-win32, x86_64-linux, x86_64-win64, x86_64-osx, arm, arm64, riscv64, arm-wince, arm64-osx."
+                i386-linux, i386-win32, x86_64-linux, x86_64-win64, x86_64-osx, armv7, arm64, riscv64, armv7-wince, arm64-osx."
 
   build-centos:
     name: CentOS
@@ -155,7 +155,7 @@ jobs:
           overwrite: true
           file_glob: true
           body: "Tiny CC RPM Installer, includes full Windows Mingw32 headers, and cross compiling tool chains for:
-                i386-linux, i386-win32, x86_64-linux, x86_64-win64, x86_64-osx, arm, arm64, riscv64, arm-wince, arm64-osx."
+                i386-linux, i386-win32, x86_64-linux, x86_64-win64, x86_64-osx, armv7, arm64, riscv64, armv7-wince, arm64-osx."
 
   build-qemu:
     name: ${{ matrix.target }}
@@ -209,4 +209,4 @@ jobs:
           overwrite: true
           file_glob: true
           body: "Tiny CC DEB Installer, includes full Windows Mingw32 headers, and cross compiling tool chains for:
-                i386-linux, i386-win32, x86_64-linux, x86_64-win64, x86_64-osx, arm, arm64, riscv64, arm-wince, arm64-osx."
+                i386-linux, i386-win32, x86_64-linux, x86_64-win64, x86_64-osx, armv7, arm64, riscv64, armv7-wince, arm64-osx."
