--- a/.github/workflows/platforms.yml
+++ b/.github/workflows/platforms.yml
@@ -20,11 +20,12 @@ jobs:
           - target: riscv64
             arch: riscv64
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: uraimo/run-on-arch-action@v2
         with:
           arch: ${{ matrix.arch }}
           distro:  ubuntu_latest
+          githubToken: ${{ github.token }}
           install: |
             apt-get update -q -y
             apt-get install -q -y autoconf automake libtool cmake build-essential
