reverting, cthread not executing on arm or riscv
- cmake config setup for arm and riscv not correct, cthread test hangs in CI, and others unknown symbol errors

--- a/tests/thread/CMakeLists.txt
+++ b/tests/thread/CMakeLists.txt
@@ -18,38 +18,41 @@ add_custom_target(
     SOURCES ${TH_DIR}/test-cthread.c )
 add_test(NAME test-cthread COMMAND test-cthread WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
+if(NOT ${TARGET_ARCH} STREQUAL armv7
+    AND NOT ${TARGET_ARCH} STREQUAL arm64
+    AND NOT ${TARGET_ARCH} STREQUAL riscv64)
 
-add_custom_target(
-    test_pool-shutdown ALL
-    COMMAND tcc ${TH_DIR}/test_pool-shutdown.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/test_pool-shutdown${EXESUF}
-    BYPRODUCTS ${CMAKE_BINARY_DIR}/test_pool-shutdown${EXESUF}
-    SOURCES ${TH_DIR}/test_pool-shutdown.c )
-add_test(NAME test_pool-shutdown COMMAND test_pool-shutdown WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+    add_custom_target(
+        test_pool-shutdown ALL
+        COMMAND tcc ${TH_DIR}/test_pool-shutdown.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/test_pool-shutdown${EXESUF}
+        BYPRODUCTS ${CMAKE_BINARY_DIR}/test_pool-shutdown${EXESUF}
+        SOURCES ${TH_DIR}/test_pool-shutdown.c )
+    add_test(NAME test_pool-shutdown COMMAND test_pool-shutdown WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
-add_custom_target(
-    test_pool-heavy ALL
-    COMMAND tcc ${TH_DIR}/test_pool-heavy.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/test_pool-heavy${EXESUF}
-    BYPRODUCTS ${CMAKE_BINARY_DIR}/test_pool-heavy${EXESUF}
-    SOURCES ${TH_DIR}/test_pool-heavy.c )
-add_test(NAME test_pool-heavy COMMAND test_pool-heavy WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+    add_custom_target(
+        test_pool-heavy ALL
+        COMMAND tcc ${TH_DIR}/test_pool-heavy.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/test_pool-heavy${EXESUF}
+        BYPRODUCTS ${CMAKE_BINARY_DIR}/test_pool-heavy${EXESUF}
+        SOURCES ${TH_DIR}/test_pool-heavy.c )
+    add_test(NAME test_pool-heavy COMMAND test_pool-heavy WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
-add_custom_target(
-    test_pool-wait ALL
-    COMMAND tcc ${TH_DIR}/test_pool-wait.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/test_pool-wait${EXESUF}
-    BYPRODUCTS ${CMAKE_BINARY_DIR}/test_pool-wait${EXESUF}
-    SOURCES ${TH_DIR}/test_pool-wait.c )
-add_test(NAME test_pool-wait COMMAND test_pool-wait WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+    add_custom_target(
+        test_pool-wait ALL
+        COMMAND tcc ${TH_DIR}/test_pool-wait.c ${TH_CFLAGS} -o ${CMAKE_BINARY_DIR}/test_pool-wait${EXESUF}
+        BYPRODUCTS ${CMAKE_BINARY_DIR}/test_pool-wait${EXESUF}
+        SOURCES ${TH_DIR}/test_pool-wait.c )
+        add_test(NAME test_pool-wait COMMAND test_pool-wait WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+    add_custom_target(
+        test-atomicity ALL
+        COMMAND tcc ${TH_DIR}/test-atomicity.c ${TH_CFLAGS} ${LIBTCC_LDFLAGS} -o ${CMAKE_BINARY_DIR}/test-atomicity${EXESUF}
+        BYPRODUCTS ${CMAKE_BINARY_DIR}/test-atomicity${EXESUF}
+        SOURCES ${TH_DIR}/test-atomicity.c )
+    add_test(NAME test-atomicity COMMAND test-atomicity WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
-add_custom_target(
-    test-atomicity ALL
-    COMMAND tcc ${TH_DIR}/test-atomicity.c ${TH_CFLAGS} ${LIBTCC_LDFLAGS} -o ${CMAKE_BINARY_DIR}/test-atomicity${EXESUF}
-    BYPRODUCTS ${CMAKE_BINARY_DIR}/test-atomicity${EXESUF}
-    SOURCES ${TH_DIR}/test-atomicity.c )
-add_test(NAME test-atomicity COMMAND test-atomicity WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-
-add_custom_target(
-    test-thread_local ALL
-    COMMAND tcc ${TH_DIR}/test-thread_local.c ${TH_CFLAGS}  ${LIBTCC_LDFLAGS} -o ${CMAKE_BINARY_DIR}/test-thread_local${EXESUF}
-    BYPRODUCTS ${CMAKE_BINARY_DIR}/test-thread_local${EXESUF}
-    SOURCES ${TH_DIR}/test-thread_local.c )
-add_test(NAME test-thread_local COMMAND test-thread_local WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+    add_custom_target(
+        test-thread_local ALL
+        COMMAND tcc ${TH_DIR}/test-thread_local.c ${TH_CFLAGS}  ${LIBTCC_LDFLAGS} -o ${CMAKE_BINARY_DIR}/test-thread_local${EXESUF}
+        BYPRODUCTS ${CMAKE_BINARY_DIR}/test-thread_local${EXESUF}
+        SOURCES ${TH_DIR}/test-thread_local.c )
+    add_test(NAME test-thread_local COMMAND test-thread_local WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+endif()
