--- a/.github/workflows/platforms.yml
+++ b/.github/workflows/platforms.yml
@@ -1,4 +1,4 @@
-name: platforms - armv7, aarch64, riscv64, etc...
+name: armv7, aarch64, riscv64
 
 on:
   pull_request:
@@ -38,4 +38,4 @@ jobs:
             cd build
             cmake -DCMAKE_BUILD_TYPE=Debug -D BUILD_TESTING=ON ..
             cmake --build .
-            ctest -C Debug --output-on-failure
+            ctest -C Debug --output-on-failure -F
