--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: built/Package/tcc-${{ github.event.release.tag_name }}-${{ matrix.config.build }}.exe
-          asset_name: TinyCC_Installer-${{ matrix.config.build }}.exe
+          asset_name: TinyCC_Installer_${{ matrix.config.build }}.exe
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
@@ -70,7 +70,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: built/Package/tcc-${{ github.event.release.tag_name }}-Darwin.dmg
-          asset_name: TinyCC_Installer-Darwin.dmg
+          asset_name: TinyCC_Installer_Darwin.dmg
           overwrite: true
           file_glob: true
 
@@ -107,7 +107,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: built/Package/tcc_${{ github.event.release.tag_name }}_amd64.deb
-          asset_name: TinyCC_Installer-Linux.deb
+          asset_name: TinyCC_Installer_Linux.deb
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
@@ -126,7 +126,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Prepare
         run: |
-          dnf install git make cmake gcc gcc-c++ binutils glibc-devel valgrind autoconf libtool bison automake libxml2-devel sudo which rpmdevtools rpmlint -y
+          dnf install git make cmake gcc gcc-c++ binutils glibc-devel valgrind autoconf libtool bison automake libxml2-devel sudo which rpmdevtools rpmlint yum-utils -y
       - name: Configure & build & Create RPM Installer from Release
         run: |
             mkdir build
@@ -139,7 +139,7 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: built/Package/tcc_${{ github.event.release.tag_name }}_amd64.rpm
-          asset_name: TinyCC_Installer-Linux.rpm
+          asset_name: TinyCC_Installer_Linux.rpm
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
