--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,15 +41,6 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: false
-      - uses: MCJack123/ghaction-generate-release-hashes@v3
-        with:
-            hash-type: md5
-            get-assets: true
-            file-name: md5.txt
-      - uses: actions/upload-artifact@v4
-        with:
-            name: Asset Hashes
-            path: md5.txt
 
   build-macos:
     name: macOS
@@ -79,21 +70,12 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: built/Package/tcc-${{ github.event.release.tag_name }}-Darwin.dmg
-          asset_name: TinyCC_Installer_Darwin.dmg
+          asset_name: TinyCC_Installer_macOS.dmg
           overwrite: true
           file_glob: false
-      - uses: MCJack123/ghaction-generate-release-hashes@v3
-        with:
-            hash-type: md5
-            get-assets: true
-            file-name: md5.txt
-      - uses: actions/upload-artifact@v4
-        with:
-            name: Asset Hashes
-            path: md5.txt
 
   build-ubuntu:
-    name: Linux ${{ matrix.target }}
+    name: Debian ${{ matrix.target }}
     permissions:
         contents: write
         packages: write
@@ -125,23 +107,13 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: built/Package/tcc_${{ github.event.release.tag_name }}_amd64.deb
-          asset_name: TinyCC_Installer_Linux.deb
+          asset_name: TinyCC_Installer_ubuntu64.deb
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: false
-      - uses: MCJack123/ghaction-generate-release-hashes@v3
-        with:
-            hash-type: md5
-            get-assets: true
-            file-name: md5.txt
-      - uses: actions/upload-artifact@v4
-        with:
-            name: Asset Hashes
-            path: md5.txt
-
 
   build-centos:
-    name: CentOS
+    name: RedHat
     permissions:
         contents: write
         packages: write
@@ -166,8 +138,8 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: built/Package/tcc_${{ github.event.release.tag_name }}_amd64.rpm
-          asset_name: TinyCC_Installer_Linux.rpm
+          file: built/Package/tcc-${{ github.event.release.tag_name }}-Linux.rpm
+          asset_name: TinyCC_Installer_centos64.rpm
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: false
